src/test/ui-fulldeps/dropck_tarena_cycle_checked.stderr
error[E0597]: `arena` does not live long enough
  --> $DIR/dropck_tarena_cycle_checked.rs:116:7
   |
LL |     f(&arena);
   |       ^^^^^^ borrowed value does not live long enough
LL | } //~^ ERROR `arena` does not live long enough
   | -
   | |
   | `arena` dropped here while still borrowed
   | borrow might be used here, when `arena` is dropped and runs the `Drop` code for type `arena::TypedArena`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
